[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rasa"
version = "3.7.0a1"
description = "Open source machine learning framework to automate text- and voice-based conversations: NLU, dialogue management, connect to Slack, Facebook, and more - Create chatbots and voice assistants"
authors = [
    {name = "Rasa Technologies GmbH", email = "hi@rasa.com"},
]
maintainers = [
    {name = "Tom Bocklisch", email = "tom@rasa.com"},
]
readme = "README.md"
license = "Apache-2.0"
requires-python = "==3.10.*"
keywords = [
    "nlp",
    "machine-learning",
    "machine-learning-library",
    "bot",
    "bots",
    "botkit",
    "rasa conversational-agents",
    "conversational-ai",
    "chatbot",
    "chatbot-framework",
    "bot-framework",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "absl-py==2.2.2",
    "aio-pika==9.5.5",
    "aiofiles==24.1.0",
    "aiogram==2.25.2",
    "aiohttp==3.8.6",
    "aiohttp-retry==2.9.1",
    "aiormq==6.8.1",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "apscheduler==3.11.0",
    "astunparse==1.6.3",
    "async-timeout==4.0.3",
    "attrs==25.3.0",
    "babel==2.9.1",
    "backoff==2.2.1",
    "bidict==0.23.1",
    "boto3==1.38.3",
    "botocore==1.38.3",
    "cachecontrol==0.14.2",
    "cachetools==5.5.2",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "cloudpickle==3.1.1",
    "colorclass==2.2.2",
    "coloredlogs==15.0.1",
    "colorhash==2.0.0",
    "confluent-kafka==2.10.0",
    "contourpy==1.3.2",
    "cryptography==44.0.2",
    "cycler==0.12.1",
    "dask==2022.10.2",
    "deprecated==1.2.18",
    "dnspython==2.3.0",
    "docopt==0.6.2",
    "exceptiongroup==1.2.2",
    "fbmessenger==6.0.0",
    "fire==0.7.0",
    "flatbuffers==25.2.10",
    "fonttools==4.57.0",
    "frozenlist==1.6.0",
    "fsspec==2025.3.2",
    "future==1.0.0",
    "gast==0.4.0",
    "google-auth==2.39.0",
    "google-auth-oauthlib==1.0.0",
    "google-pasta==0.2.0",
    "googleapis-common-protos==1.56.1",
    "greenlet==3.2.1",
    "grpcio==1.60.2",
    "grpcio-health-checking==1.59.5",
    "grpcio-tools==1.60.2",
    "h5py==3.13.0",
    "html5tagger==1.3.0",
    "httptools==0.6.4",
    "humanfriendly==10.0",
    "idna==3.10",
    "jax==0.4.30",
    "jaxlib==0.4.30",
    "jmespath==1.0.1",
    "joblib==1.4.2",
    "jsonpickle==4.0.5",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2025.4.1",
    "keras==2.12.0",
    "kiwisolver==1.4.8",
    "libclang==18.1.1",
    "locket==1.0.0",
    "magic-filter==1.0.12",
    "markdown==3.8",
    "markupsafe==3.0.2",
    "matplotlib==3.10.1",
    "mattermostwrapper==2.2",
    "mitie",
    "ml-dtypes==0.5.1",
    "msgpack==1.1.0",
    "multidict==6.4.3",
    "networkx==3.1",
    "numpy==1.23.5",
    "oauthlib==3.2.2",
    "opentelemetry-api==1.16.0",
    "opentelemetry-exporter-jaeger==1.16.0",
    "opentelemetry-exporter-jaeger-proto-grpc==1.16.0",
    "opentelemetry-exporter-jaeger-thrift==1.16.0",
    "opentelemetry-exporter-otlp==1.16.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.16.0",
    "opentelemetry-exporter-otlp-proto-http==1.16.0",
    "opentelemetry-proto==1.16.0",
    "opentelemetry-sdk==1.16.0",
    "opentelemetry-semantic-conventions==0.37b0",
    "opt-einsum==3.4.0",
    "packaging==25.0",
    "pamqp==3.3.0",
    "partd==1.4.2",
    "pillow==11.2.1",
    "pluggy==1.5.0",
    "portalocker==3.1.1",
    "prompt-toolkit==3.0.51",
    "propcache==0.3.1",
    "protobuf==4.25.7",
    "psycopg2-binary==2.9.10",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.22",
    "pydantic==2.11.3",
    "pydantic-core==2.33.1",
    "pydot==1.4.2",
    "pyjwt==2.10.1",
    "pykwalify==1.8.0",
    "pymongo==4.12.0",
    "pyparsing==3.2.3",
    "pytest-sanic>=1.6.2",
    "python-crfsuite==0.9.11",
    "python-dateutil==2.9.0.post0",
    "python-engineio==4.12.0",
    "python-socketio==5.13.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "questionary==2.1.0",
    "randomname==0.2.1",
    "rasa-sdk @ git+https://github.com/sfahad1414/rasa-sdk.git",
    "redis==5.2.1",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rocketchat-api==1.35.0",
    "rpds-py==0.24.0",
    "rsa==4.9.1",
    "ruamel-yaml==0.18.10",
    "ruamel-yaml-clib==0.2.12",
    "s3transfer==0.12.0",
    "sanic==25.3.0",
    "sanic-cors==2.2.0",
    "sanic-jwt==1.8.0",
    "sanic-routing==23.12.0",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "sentry-sdk==2.27.0",
    "setuptools==80.0.0",
    "simple-websocket==1.1.0",
    "six==1.17.0",
    "sklearn-crfsuite==0.5.0",
    "slack-sdk==3.35.0",
    "sqlalchemy==2.0.40",
    "structlog==25.3.0",
    "structlog-sentry==2.2.1",
    "tabulate==0.9.0",
    "tarsafe==0.0.5",
    "tensorboard==2.12.3",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.12.0",
    "tensorflow-estimator==2.12.0",
    "tensorflow-hub==0.16.1",
    "tensorflow-io-gcs-filesystem==0.32.0",
    "tensorflow-text==2.12.0",
    "termcolor==3.0.1",
    "terminaltables==3.1.10",
    "tf-keras==2.15.0",
    "threadpoolctl==3.6.0",
    "thrift==0.21.0",
    "toolz==1.0.0",
    "tqdm==4.67.1",
    "tracerite==1.1.1",
    "twilio==9.5.2",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "typing-utils==0.1.0",
    "tzlocal==5.3.1",
    "ujson==5.10.0",
    "urllib3==2.4.0",
    "uvloop==0.21.0",
    "wcwidth==0.2.13",
    "webexteamssdk==1.6.1",
    "websockets==15.0.1",
    "werkzeug==3.1.3",
    "wheel==0.45.1",
    "wrapt==1.14.1",
    "wsproto==1.2.0",
    "yarl==1.20.0",
]

[project.optional-dependencies]
spacy = [
    "spacy>=3.4; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "spacy>=3.1; sys_platform != 'darwin' or platform_machine != 'arm64'",
    "pydantic>=1.10.10",
]
jieba = ["jieba>=0.39,<0.43"]
transformers = [
    "transformers>=4.13.0",
    "sentencepiece~=0.1.99",
]
full = [
    "spacy>=3.4; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "spacy>=3.1; sys_platform != 'darwin' or platform_machine != 'arm64'",
    "pydantic>=1.10.10",
    "transformers>=4.13.0",
    "sentencepiece~=0.1.99",
    "jieba>=0.39",
]
gh-release-notes = ["github3.py~=3.2.0"]
metal = ["tensorflow-metal>=0.8.0; sys_platform == 'darwin' and platform_machine == 'arm64'"]
dev = [
    "ruff>=0.0.255",
    "docker>=6.0.1",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-xdist>=3.2.1,<4.0.0",
    "pytest==8.3.5",
    "freezegun>=1.0.0",
    "responses>=0.22.0",
    "aioresponses>=0.7.2",
    "moto~=4.1.2",
    "fakeredis>=2.11.2",
    "mongomock>=4.1.2",
    "black>=22.10.0",
    "google-cloud-storage>=2.4.0",
    "azure-storage-blob>=12.17.0",
    "coveralls>=3.0.1",
    "towncrier>=22.8.0",
    "toml>=0.10.0",
    "pydoc-markdown>=4.7.0",
    "pytest-timeout>=2.1.0",
    "mypy>=1.0.0",
    "bandit>=1.6.3",
    "types-pytz>=2022.1.1",
    "types-python-dateutil>=2.8.19",
    "types-requests>=2.25.0",
    "types-setuptools>=67.2.0",
    "memory-profiler>=0.61.0",
    "psutil>=5.8.0",
    "mypy-extensions>=0.4.3",
    "sanic-testing>=21.12.0",
    "segment-analytics-python==2.3.4",
    "datadog-api-client>=2.0.0",
    "datadog>=0.45.0",
    "types-redis>=4.3.20",
    "httpx==0.23.3",
]

[project.urls]
Homepage = "https://rasa.com"
Repository = "https://github.com/rasahq/rasa"
Documentation = "https://rasa.com/docs"

[project.scripts]
rasa = "rasa.__main__:main"

[tool.ruff]
ignore = ["D100", "D104", "D105", "RUF001", "RUF002", "RUF003", "RUF005"]
line-length = 88
select = ["D", "E", "F", "W", "RUF"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/test_telemetry.py" = ["E501"]
"tests/shared/core/test_domain.py" = ["E501"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]
exclude = "((.eggs | .git | .pytest_cache | build | dist))"

[tool.mypy]
mypy_path = "./stubs"
ignore_missing_imports = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = false
disable_error_code = ["arg-type"]

[tool.bandit]
skips = ["B104", "B301"]

[tool.towncrier]
package = "rasa"
package_dir = "rasa"
filename = "CHANGELOG.mdx"
directory = "./changelog"
underlines = "   "
title_format = "## [{version}] - {project_date}"
template = "./changelog/_template.md.jinja2"
start_string = "<!-- TOWNCRIER -->\n"
issue_format = "[#{issue}](https://github.com/rasahq/rasa/issues/{issue})"

[[tool.towncrier.type]]
directory = "removal"
name = "Deprecations and Removals"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "improvement"
name = "Improvements"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bugfixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Improved Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneous internal changes"
showcontent = false

[tool.pytest.ini_options]
pythonpath = ["."]
python_functions = "test_"
filterwarnings = ["ignore::ResourceWarning:ruamel[.*]"]
log_cli_level = "WARNING"
log_cli = true
markers = [
    "skip_on_windows",
    "skip_on_ci",
    "sequential",
    "category_cli",
    "category_core_featurizers",
    "category_policies",
    "category_nlu_featurizers",
    "category_nlu_predictors",
    "category_full_model_training",
    "category_other_unit_tests",
    "category_performance",
    "flaky",
]
timeout = 60
timeout_func_only = true
asyncio_mode = "auto"

[tool.setuptools]
packages = [
    "rasa",
]
include-package-data = true

[tool.uv.sources]
rasa-sdk = { git = "https://github.com/sfahad1414/rasa-sdk.git" }
mitie = { git = "https://github.com/mit-nlp/MITIE.git" }
